# tiny-dino-vit

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.api  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
ablations/: README.md  __init__.py  _common.py  ablations.yaml  collect_results.py  run_ablation.py  run_all.py
configs/: debug.yaml  multi_gpu.yaml  set_up.yaml  vit_base.yaml  vit_large.yaml  vit_small.yaml
data/: README.md  __init__.py  data_config.py  data_utils.py  dataops.py  load_data.py
docs/: architecture.md  configs.md  data.md  index.md  inference.md  losses.md  overview.md  training.md
notebooks/: DINO_Implementation.ipynb
scripts/: infer_dino.py  inspect_data.py  train_dino.py  train_dino_multi_gpu.py
src/app/: README.md  __init__.py  config.py  image_io.py  main.py  model_service.py  schemas.py
src/inference/: __init__.py  forward.py  image_metrics.py  pipeline.py  preprocessing.py  segmentation.py  visualization.py
src/model/: attention.py  dino_full_model.py  dino_head.py  embeddings.py  rope.py  transformer_block.py  vit_model.py  vit_utils.py
src/model/loss/: __init__.py  dino_gram_loss.py  dino_loss.py
src/paralel/: __init__.py  config.py  data_parallel.py  distributed.py  model_parallel.py
src/training/: autocast.py  chekpoints.py  ema.py  high_level_training_helpers.py  main_metrics.py  metrics.py  schedulers.py  schedulers_helpers.py  seed.py  train_dino.py  train_one_epoch.py
tests/: test_data_load_data.py  test_model_attention.py  test_model_dino_gram_loss.py  test_model_dino_head.py  test_model_embeddings.py  test_model_rope.py  test_model_transformer_block.py  test_model_vit_model.py  test_model_vit_utils_attention.py
